Fixed the overlap problem of panel manager

--- a/css/panel-manager-style.css
+++ b/css/panel-manager-style.css
@@ -15,6 +15,7 @@
     position: fixed;
     top: 70px;
     right: 249px;
+    z-index: 100;
     /*transform: rotate(-90deg);*/
 }
 #slidebar button {
@@ -25,6 +26,7 @@
     /*border-right: none;*/
 }
 #slider {
+    background-color: white;
     border: solid 1px #ccc;
     border-radius: 0px;
     border-bottom-left-radius: 4px;
@@ -37,13 +39,13 @@
     top: 70px;
     right: 0px;
     bottom: 30px;
-    z-index: -1;
+    z-index: 10;
 }
 #tab-slidebar {
     padding-left: 0px;
 }
-.sideways {
-    padding-top: 0px;
+.sideways li:first-child {
+    margin-top: -3px;
 }
 #tab-content-slidebar {
     margin-top: 10px;
